# cargo-dependency-inheritor

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: main.rs
