[package]
name = "cargo-dependency-inherit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.0"
clap = {version="3.2.22", features=["derive"]}
toml_edit = {  version = "0.14.4", default-features = true }