[package]
name = "cargo-dependency-inheritor"
version = "0.1.0"
edition = "2021"
license = "MIT1 OR Apache-2.0"
authors = ["T.Post"]
description = "Utility that inherits dependencies from the main workspace if they occur 'n' or more times in the workspace."
categories = ["command-line-utilities", "cargo"]

[dependencies]
cargo_metadata = "0.15.0"
clap = { version="3.2.22", features=["derive"] }
toml_edit = {  version = "0.14.4", default-features = true }