[package]
name = "cargo-dependency-inheritor"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["T.Post"]
description = "Utility that inherits dependencies from the main workspace if they occur 'n' or more times in the workspace."
categories = ["command-line-utilities", "cargo"]

[dependencies]
cargo_metadata = "0.15.0"
clap = { version="4.1.4", features=["derive"] }
dunce = "1"
toml_edit = {  version = "0.18.0", default-features = true }
